--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "vercel-build": "next build"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "feather-icons": "^4.29.2",
     "next": "^15.5.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
