--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^15.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "three": "^0.180.0",
     "vanta": "^0.5.24"
   },
   "devDependencies": {
