--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,25 @@
 {
   "name": "STEM Village",
-  "short_name": "STEMVillage",
-  "start_url": "/",
-  "scope": "/",
-  "display": "standalone",
-  "background_color": "#2563eb",
-  "theme_color": "#2563eb",
+  "short_name": "STEM Village",
   "description": "Gamified learning platform for rural Odisha with offline-first capabilities.",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/logo-white.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/logo-white.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#f3f4f6",
+  "theme_color": "#3b82f6",
+  "orientation": "any",
+  "scope": "/",
+  "categories": ["education", "games", "productivity"],
+  "lang": "en"
 }
